# GLaDOS

./: .coveragerc  .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/: .buildinfo  genindex.html  glados.bot.html  glados.configs.html  glados.core.html  glados.datastore.html  glados.errors.html  glados.glados_bot.html  glados.glados_core.html  glados.glados_errors.html  glados.glados_plugin.html  glados.glados_request.html  glados.glados_router.html  glados.html  glados.message_blocks.html  glados.plugin.html  glados.request.html  glados.route_type.html  glados.router.html  glados.slack_classes.html  glados.slack_classes.views.html  glados.utils.html  glados_plugin.html  glados_structure.html  index.html  install.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs-src/: Makefile  commands.txt  conf.py  glados.bot.rst  glados.configs.rst  glados.datastore.rst  glados.db.rst  glados.glados_errors.rst  glados.request.rst  glados.route_type.rst  glados.rst  glados.slack_classes.rst  glados.slack_classes.views.rst  glados.utils.rst  glados_structure.rst  index.rst  install.rst  modules.rst
example/: .env  __init__.py  app.py  example_ngrok.py  requirements.txt  server.py
glados/: __init__.py  bot.py  core.py  glados.py  glados_bot.py  glados_core.py  glados_errors.py  glados_plugin.py  glados_request.py  glados_router.py  message_blocks.py  plugin.py  request.py  route_type.py  router.py  utils.py
tests/: __init__.py  glados.yaml  glados_limited.yaml  test_glados_bot.py  test_glados_configs.py  (+3 more)
(+135 files in other folders)
