[metadata]
name = glados
version = 0.0.1-dev6
description = A library to help with slackbot development
long_description = file: README.md
long_description_content_type = text/markdown
keywords = slack slackbot
license = BSD-derived (http://www.repoze.org/LICENSE.txt)
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
url = https://github.com/zpriddy/GLaDOS
project_urls =
    Bug Tracker = https://github.com/zpriddy/GLaDOS/issues
    Blog = https:/zpriddy.com 
    Source Code = https://github.com/zpriddy/GLaDOS/
author = Zachary Priddy
author_email = py@zpriddy.com

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.5
install_requires =
    slackclient==2.3.1
    pyyaml
    glob

[options.packages.find]
where=src

[options.extras_require]
testing =
    pytest
    pytest-cov
    coverage
docs =
    Sphinx
    sphinx-rtd-theme
    sphinx-autodoc-typehints

[bdist_wheel]
universal=0

[tool:pytest]
ignore=tests/fixtures/
python_files = test_*.py
testpaths =
    tests
addopts = -W always --cov --cov-report=term-missing

